--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "main": "./src/main.ts",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "postinstall": "node -e \"try{require('fs').unlinkSync('./hooks/before-checkForChanges/nativescript-core.mjs')}catch(e){}\""
+  },
   "dependencies": {
     "@angular/animations": "~20.0.0",
     "@angular/common": "~20.0.0",
